# zelda-lore-analytics

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
app/: streamlit_app.py
scripts/: ingest.py
src/zla/: analysis.py  data.py  etl.py  llm.py  viz.py
